feat: enhance order details display with itemized lists for regular and custom meals

--- a/application/templates/deliverylayout.html
+++ b/application/templates/deliverylayout.html
@@ -25,6 +25,14 @@
   <!-- Pace.js Loader -->
   <link rel="stylesheet" href="{{ url_for('static', filename='lib/pace/themes/green/pace-theme-minimal.css') }}">
   <script src="{{ url_for('static', filename='lib/pace/pace.min.js') }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RXFP2GFTF4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RXFP2GFTF4');
+</script>
 
   <style>
     /* Loader Spinner */
