--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -116,6 +116,15 @@
     if (el) el.textContent = data.cart_count;
   });
 </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RXFP2GFTF4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RXFP2GFTF4');
+</script>
+
 
 <!-- Navbar -->
 <header>
