feat: update store registration icon for improved visual consistency

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -157,7 +157,7 @@
           </li>
           <li class="nav-item icon-btn">
             <a href="{{ url_for('auth.registerstore') }}" class="btn bg-light rounded-pill">
-              <i class="fas fa-store-plus"></i> <span class="link-text">Register Store</span>
+              <i class="fas fa-store-alt"></i> <span class="link-text">Register Store</span>
             </a>
           </li>
           <li class="nav-item icon-btn">
