refactor: remove commented-out custom meal button for cleaner code

--- a/application/templates/customer/updated_menu.html
+++ b/application/templates/customer/updated_menu.html
@@ -23,13 +23,13 @@
     </form>
   </div>
 
-  <!-- Custom Meal Button -->
+  <!-- Custom Meal Button 
   <div class="mb-4 text-center">
     <a href="{{ url_for('main.custom_meal', store_id=store.id) }}" class="btn btn-outline-success rounded-pill">
       Build Your Own Meal
     </a>
   </div>
-
+-->
   <!-- Product Grid -->
   <div class="row row-cols-1 row-cols-md-3 g-4">
     {% for product in products %}
