feat: add meta tag for tracking purposes in layout template

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="current-user-id" content="{{ current_user.id if current_user.is_authenticated else '' }}">
+  <meta name="76c46547d0595250235852b887804a1f11a47bf4" content="76c46547d0595250235852b887804a1f11a47bf4" />
   <title>
       {% block title %}
           {% if store is defined and store.name is defined %}
