--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,10 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="referrer" content="no-referrer-when-downgrade" />
+  <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+<script>
+    window.ezstandalone = window.ezstandalone || {};
+    ezstandalone.cmd = ezstandalone.cmd || [];
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="current-user-id" content="{{ current_user.id if current_user.is_authenticated else '' }}">
-  <meta name="76c46547d0595250235852b887804a1f11a47bf4" content="76c46547d0595250235852b887804a1f11a47bf4" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="SmartEats – Order Food From Local Restaurants">
+  <meta property="og:description" content="Order delicious meals from nearby restaurants with SmartEats. Fast, simple, and reliable food delivery.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="{{ request.url }}">
+  <meta property="og:image" content="{{ url_for('static', filename='css/images/worka.png', _external=True) }}">
+<script data-cfasync="false" src="https://cmp.gatekeeperconsent.com/min.js"></script>
+<script data-cfasync="false" src="https://the.gatekeeperconsent.com/cmp.min.js"></script>
+  <!-- SEO Meta -->
+  <meta name="description" content="SmartEats is a food ordering and delivery platform connecting customers with local restaurants for fast, reliable meals. Order food online with ease.">
+  <meta name="keywords" content="SmartEats, food delivery, online food ordering, local restaurants, fast food delivery">
+  <meta name="author" content="Pi Technologies">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="{{ request.url }}">
+
+
   <title>
       {% block title %}
           {% if store is defined and store.name is defined %}
@@ -79,6 +98,21 @@
     .pace .pace-activity { display: block; position: fixed; z-index: 2001; top: 50%; left: 50%; width: 45px; height: 45px; border: 4px solid #00b37e; border-top-color: transparent; border-radius: 50%; animation: pace-spinner 0.8s linear infinite; transform: translate(-50%, -50%); }
     @keyframes pace-spinner { 0% { transform: translate(-50%, -50%) rotate(0deg); } 100% { transform: translate(-50%, -50%) rotate(360deg); } }
   </style>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FoodDeliveryService",
+  "name": "SmartEats",
+  "url": "{{ request.url_root }}",
+  "logo": "{{ url_for('static', filename='css/images/worka.png', _external=True) }}",
+  "description": "SmartEats is a food ordering and delivery platform connecting customers with local restaurants.",
+  "provider": {
+    "@type": "Organization",
+    "name": "Pi Technologies"
+  }
+}
+</script>
+
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -109,23 +143,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     if(el) el.textContent = data.cart_count;
   });
 </script>
-<script>
-(function(onj){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = onj || {};
-s.src = "\/\/shockedmirror.com\/blXlV.s\/dDGUl-0ZYZWpco\/DeLm-9HueZ-UYlekVPVTYYy3ENVDhMa2eM\/zlA\/tQNTjWcK0JMizlY\/zhM\/QG";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
 
 <header>
   <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3">
     <div class="container">
-      <img src="{{ url_for('static', filename='css/images/worka.png') }}" class="img-fluid logo" />
+  <img 
+    src="{{ url_for('static', filename='css/images/worka.png') }}" 
+    class="img-fluid logo"
+    alt="SmartEats food ordering and delivery logo"
+  />
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -217,30 +244,6 @@ l.parentNode.insertBefore(s, l);
 
 <script src="{{ url_for('static', filename='lib/jquery/dist/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='lib/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
-<script>
-(function(mumulj){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = mumulj || {};
-s.src = "\/\/shockedmirror.com\/bYXOVjs.duGcl\/0lYNWDcE\/LeJmm9gu-ZuUCl-kIPXTbYf3vNSD\/M\/2gMoDqkwtKN_jGcr0IM\/zgYYxlMZAk";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
 
-})({})
-</script>
-<script>
-(function(opzqcv){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = opzqcv || {};
-s.src = "\/\/shockedmirror.com\/bnX.VysQd\/G\/lk0lYtW\/cb\/_epmX9wudZlUAlWkgPbTwY\/3JNADDMf2sMwTqIztoNXj\/cv0lM_zkYKxaMtwv";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
 </body>
 </html>
