--- a/application/templates/adminlayout.html
+++ b/application/templates/adminlayout.html
@@ -210,7 +210,14 @@
         <hr class="sidebar-divider">
 
         <div class="sidebar-heading">Order Management</div>
-
+        <!--
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('store.vendor_pos') }}">
+                <i class="fas fa-cash-register"></i>
+                <span>Open POS</span>
+            </a>
+        </li>
+        -->
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('store.ActiveOrders') }}">
                 <i class="fas fa-receipt"></i>
@@ -359,7 +366,7 @@
                 {% block content %}{% endblock %}
             </div>
         </div>
-2
+
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="text-center my-auto">
