--- a/application/templates/auth/registerphar.html
+++ b/application/templates/auth/registerphar.html
@@ -2,10 +2,6 @@
 {% block title %}Register your Store - SmartEats{% endblock %}
 
 {% block content %}
-
-
-
-
 <div class="card">
     <div class="text-center mb-4">
     <h4>Store Registration</h4>
@@ -22,7 +18,7 @@
               <form id="formAuthentication" class="mb-3" action="{{url_for('auth.registerstore')}}" method="POST">
                 <div class="mb-3">
                 {{ form.hidden_tag() }}
-                {% for field in [form.pharmacy_name, form.email, form.phone, form.address, form.opening_hours_and_days, form.password] %}
+                {% for field in [form.pharmacy_name, form.email, form.phone, form.address, form.district, form.town, form.opening_hours_and_days, form.password] %}
                     <div class="form-group mb-3">
                         {{ field.label(class="form-label") }}
                         {{ field(class="form-control", placeholder=field.label.text) }}
